# MazePy

./: .gitignore  LICENSE.txt  README.md  README.rst  __init__.py  exceptions.py  pyproject.toml  setup.py
basic/: Smooth.py  __init__.py  _calc_rate.c  _calc_rate.pyi  _calc_rate.pyx  _calculate.c  _calculate.pyx  _corr.c  _corr.pyi  _corr.pyx  _cshuffle.c  _cshuffle.pyi  _cshuffle.pyx  _csmooth.c  _csmooth.pyx  _time_sync.c  _time_sync.pyi  _time_sync.pyx  _utils.c  _utils.pyi  _utils.pyx  calculate.py  calculation.py  conversion.py
behav/: cut_bin.py  element.py  graph.py  grid.py  gridbin.py  interface.py  mazestructure.py  trajactory.py  transloc.py
behav/mazeobj/: __init__.py  chessboard.py  edge.py  element.py  graph.py  maze_design.py  windowobj.py  windows.py
behavior/: arena.py
check/: classcheck.py
datastruc/: __init__.py  eeg.py  kernel.py  neuact.py  neuact.pyi  variables.py  variables.pyi
gui/: ErrorWindow.py  __init__.py  readexcel.py  video_label.py
gui/create_config/: __init__.py  enter_names.py  set_config.py  work_sheet.py
gui/env_design/: circle.py  designer.py  element.py  empty.py  rectangle.py  square.py  triangle.py  y_maze.py
gui/label_video/: __init__.py  catelabel.py  frame_record_sheet.py  main.py  records.py  set_wheel_step.py  video_sliders.py
os/: __init__.py  utils.py
plot/: loc_time_curve.py  mazeprofile.py  peak_curve.py  rate_map.py  trace_map.py  utils.py
tests/: test_diy_maze_structure.py  test_graph.py
types/: variables.py  variables.pyi
utils/: __init__.py  calculation.py  information.py  transloc.py
(+24 files in other folders)
