[build-system]
requires = ["setuptools>=61.0","numpy>=1.22.2","matplotlib>=3.2.2","seaborn>=0.11.2", "scipy>=1.7.3", "opencv>=4.0.1", "h5py>=3.6.0", "pyglet>=2.0.5", "networkx>=2.7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mazepy"
version = "0.0.1"
authors = [
  { name="Shuyang Yao", email="qzyaoshuyang3@pku.edu.cn" },
]
description = "This package is developed for analyzing data recorded in system neuroscience research. It provides a tool to effectively process behavioral data and neural activities."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/YAO-Shuyang/MazePy"
"Bug Tracker" = "https://github.com/YAO-Shuyang/MazePy"